[gd_scene load_steps=12 format=3 uid="uid://c2jsasl1q0gg7"]

[ext_resource type="Script" path="res://scene/enemy/enemy.gd" id="1_jttax"]
[ext_resource type="Texture2D" uid="uid://casvlwh0vowve" path="res://asset/sprite/mermaid/mermaid_swim.png" id="2_8s1sy"]
[ext_resource type="Texture2D" uid="uid://cakh1yi7yte1b" path="res://asset/sprite/mermaid/mermaid_dash.png" id="3_205lk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kv6ba"]
radius = 4.5
height = 24.0

[sub_resource type="Animation" id="Animation_ssm5w"]
resource_name = "Swim"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwimSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bu3u0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwimSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvvtn"]
_data = {
"RESET": SubResource("Animation_bu3u0"),
"Swim": SubResource("Animation_ssm5w")
}

[sub_resource type="Animation" id="Animation_ssvqe"]
resource_name = "Damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwimSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(5, 5, 5, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3wvca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwimSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(5, 5, 5, 1)]
}

[sub_resource type="Animation" id="Animation_d2vry"]
resource_name = "Normal"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwimSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2a34r"]
_data = {
"Damaged": SubResource("Animation_ssvqe"),
"Normal": SubResource("Animation_d2vry"),
"RESET": SubResource("Animation_3wvca")
}

[node name="Enemy" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_jttax")
metadata/_edit_group_ = true

[node name="SwimSprite" type="Sprite2D" parent="."]
self_modulate = Color(5, 5, 5, 1)
rotation = 2.35619
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_8s1sy")
hframes = 5

[node name="DashSprite" type="Sprite2D" parent="."]
visible = false
rotation = 2.35619
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_205lk")
hframes = 7
frame = 3

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kv6ba")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pvvtn")
}
autoplay = "Swim"

[node name="TintPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2a34r")
}
autoplay = "Normal"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
